# agents_generator

./: .gitignore  1pyproject.toml  README.md  main.py  mcp_config.json  pyproject.toml  requirements.txt  setup.py
agent_generator/: README.md  __init__.py  pyproject.toml  requirements.txt
agent_generator/agents/: MANIFEST.in  __init__.py  base.py  critic_agent.py  null_agent.py  tool_agent.py
agent_generator/agents/templates/: prompts.py
agent_generator/mcp_servers/: README.md  __init__.py  test_calculator_client.py
agent_generator/mcp_servers/servers/: tavily_mcp.py  weather_mcp.py
agent_generator/mcp_servers/utils/: config_manager.py  requirements.txt  template_generator.py  uv_manager.py
agents/: __init__.py  langchain_mcp_adapters_patch.py
agents/agents/: __init__.py  base.py  chat_agent.py  router_agent.py  tool_agent.py
agents/connectors/: __init__.py
agents/templates/: __init__.py  prompts.py
examples/: chat_agent_example.py  multi_mcp_example.py  router_agent_example.py  simple_tool_agent_example.py  tool_agent_example.py
mcp_servers/: __init__.py  test_calculator_client.py
mcp_servers/servers/: calculator_mcp.py  weather_mcp.py
mcp_servers/utils/: config_manager.py  template_generator.py  uv_helper.py  uv_manager.py
simple_agent_framework/: __init__.py
simple_agent_framework/agents/: base.py  chat_agent.py  router_agent.py  tool_agent.py
simple_agent_framework/connectors/: mcp.py
simple_agent_framework/templates/: prompts.py
simple_agent_framework/utils/: helpers.py
src/agent_generator/: __init__.py  pyproject.toml.bc
(+10 files in other folders)
